# gl_wrapper

./: CMakeLists.txt  conan.txt  conanfile.txt
source/gl_wrapper/: CMakeLists.txt  GLDebug.cpp  GLDebug.hpp  GLWFCallbacks.cpp  GLWFCallbacks.hpp  GLWrapper.cpp  GLWrapper.hpp  OpenGLHeaders.hpp
source/gl_wrapper/buffer/: Buffer.cpp  Buffer.hpp  BufferConfiguration.cpp  BufferConfiguration.hpp  BufferData.cpp  BufferData.hpp
source/gl_wrapper/info/: Monitor.cpp  Monitor.hpp
source/gl_wrapper/shaders/: Shader.cpp  Shader.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp
source/gl_wrapper/texture/: GLTextureLoader.cpp  GLTextureLoader.hpp
source/gl_wrapper_test/: CMakeLists.txt  main.cpp
